# SBN_3plusN

./: .gitignore  Makefile  README.md  correlation.c  correlation.h  detector.c  detector.h  lib.bib  main.tex  model.c  model.h  params.h  prob.c  prob.h  sbnfit.cxx  wrkInstance.c  wrkInstance.h
GlobalFits/: globFit.root  globalFit  makefile  ntupleGridder  ntupleProcess  plotter  readme  run_job.sh
GlobalFits/data/: cdhs_noosc.txt  cdhs_sinsq.txt  lsndsinsq.txt  miniboone_binboundaries_numu.txt  miniboone_full_fractcovmatrix.txt  miniboone_full_fractcovmatrix_nubar_lowe.txt  miniboone_full_fractcovmatrix_nunubar_lowe.txt  miniboone_nuebarbgr.txt  miniboone_nuebarbgr_lowe.txt  miniboone_nuebardata_lowe.txt  miniboone_nuebgr_lowe.txt  miniboone_numubardata.txt  miniboone_numudata_disap.txt  numi_fullosc.out
GlobalFits/diag/: run_job_diag.sh  submit_diagnostics.sh
GlobalFits/globalFit.dSYM/Contents/: Info.plist
GlobalFits/globalFit.dSYM/Contents/Resources/DWARF/: globalFit
GlobalFits/inputs/: jobOptions.txt  jobOptionsDiag.txt  processOptions.txt
GlobalFits/ntuples/: nt_31_all.root  nt_31_all_new_processed.root  nt_31_all_processed.root  nt_31_brute.root  nt_32_all.root  nt_32_all_processed.root  nt_32_phi.root  nt_33_all_processed.root  nt_33_app.root
GlobalFits/src/: bruteforce3p1.cxx  detectorChisq.cpp  detectorInit.cpp  globalFit.cxx  globalFit.h  ntupleGridder.cxx  ntupleProcess.cxx  plotter.cxx  scraps.cpp
GlobalFits/testPlots/: globFit_1.root  globFit_10.root  globFit_11.root  globFit_12.root  globFit_13.root  globFit_14.root  globFit_15.root  globFit_16.root  globFit_17.root  globFit_18.root  globFit_19.root  globFit_20.root
GlobalFits_v2/: CMakeLists.txt  README
GlobalFits_v2/data/: miniboone_binboundaries_nubar.txt  miniboone_full_fractcovmatrix_nubar.txt  miniboone_full_fractcovmatrix_nunubar.txt  miniboone_nuebardata.txt  miniboone_nuebgr.txt  miniboone_nuedata.txt  miniboone_numubar.txt  miniboone_numubardata_disap.txt
GlobalFits_v2/data/miniboone/: MC_nue.txt  MC_numu.txt  binboundaries_nue.txt  data_nue.txt  data_numu.txt  frac_error_matrix_contNu.txt
GlobalFits_v2/fitters/: CMakeLists.txt  ICtoTH3D.cc  analyzethis.cxx  bruteforce3p1.cc  bruteforce3p1.cxx  bruteforce3p1_angles.cc  globalFit.cc  globalFit_v2.cc  hypervolume_threeplusone.cc  noosc.cc  ntupleGridder_old.cc  ntupleProcess.cxx  ntuple_metrics.cc  plotLooper_appearance.cc  plotLooper_nuedis.cc  plotLooper_numudis.cc  plotLooper_numudis_exclusion.cc  plotLooper_v1.cc  process_3p3.cc  process_global.cc  process_ntuple.cc  process_threeplusone.cc  singlepoint.cc  uBfitter.cc  uBfitter_frequensens.cc
GlobalFits_v2/inc/: Atm.h  Bugey.h  CCFR.h  CDHS.h  DANSS.h  FromChi2Surf.h  Gallium.h  IceCube.h  IceCube_fromSurfs.h  KARMEN.h  LSND_loglikelihood.h  MINOS.h  MINOSplus.h  MicroBooNE_dis.h  MiniBooNE.h  MiniBooNE_combined.h  MiniBooNE_dis.h  NEOS.h  NOMAD.h  NuMI.h  OscTools.h  PROSPECT.h  XMLTools.h  XSec.h  datasets.h  fitter.h  globalFit.h
GlobalFits_v2/inc/SQuIDS/: version.h
GlobalFits_v2/inc/nuSQuIDS/: global.h
GlobalFits_v2/plotters/: October2020 Dataset Tests.ipynb  PlotsForThesis.ipynb  Posterplots.ipynb  SimplePlot.ipynb
GlobalFits_v2/src/: Atm.cc  Bugey.cc  CCFR.cc  CDHS.cc  CMakeLists.txt  DANSS.cc  FromChi2Surf.cc  Gallium.cc  IceCube_fromSurfs.cc  KARMEN.cc  LSND_loglikelihood.cc  MINOS.cc  MINOSplus.cc  MicroBooNE_dis.cc  MicroBooNE_dis_2d.cc  MiniBooNE.cc  MiniBooNE_combined.cc  MiniBooNE_dis.cc  NEOS.cc  NOMAD.cc  NuMI.cc  OscTools.cc  PROSPECT.cc  XMLTools.cc  XSec.cc
GlobalFits_v2/tools/: CMakeLists.txt  ICtoTH3D.cc
GlobalFits_v2/xml/: brutegrid.xml  global.xml  plotLoop_v1.xml  proc_brute.xml
IceCube/: IC86NomMC  detectorResponseArray.txt  fluxprop  makefile  paperplots.ipynb
IceCube/.ipynb_checkpoints/: fluxConvolve-checkpoint.ipynb
IceCube/src/: IC86NomMC.cxx  fluxProp_FitLib.cxx  fluxprop.cxx  globFitIC86.cxx  icecube.h  icecubetest.cxx
analysis_scripts/: 3p1_analyse.sh  3p1_analyse.sh.new  3p2_analyse.sh  3p3_analyse.sh  README  nubar_pot3p1.sh  nubar_pot3p1_analyse.sh  nubar_pot3p1_par.sh  nubar_pot3p2.sh  nubar_pot3p2_analyse.sh  nubar_pot3p2_analyse_B.sh  nubar_pot3p3.sh  nubar_pot3p3_analyse.sh  nubar_pot3p3_analyse_B.sh  pot3p1.sh  pot3p1_analyse.sh  pot3p2_a.sh  pot3p2_all.sh  pot3p2_analyse.sh  pot3p2_app_a.sh  pot3p2_app_b.sh  pot3p2_app_c.sh  pot3p2_b.sh  pot3p2_c.sh  pot3p2_dis_a.sh  pot3p2_dis_b.sh  pot3p2_dis_c.sh  pot3p2_wierd_a.sh  pot3p2_wierd_b.sh  pot3p3_a.sh  pot3p3_all.sh  pot3p3_analyse.sh  pot3p3_app_a.sh  pot3p3_app_b.sh  pot3p3_b.sh  pot3p3_dis_a.sh  pot3p3_dis_b.sh  pot3p3_makeup.sh  pot3p3_par.sh
figures/: spectrum.eps  spectrum.tex  spectrum_angles_ee.eps  spectrum_angles_ee.tex
generation_scripts/: gen_3p1_fraction_parallel5.sh  gen_3p1_fraction_parallel5_NUBAR.sh  gen_3p2_fraction_parallel5.sh  gen_3p2_fraction_parallel5.sh.new  gen_3p2_fraction_parallel5_NUBAR.sh  gen_3p2_fraction_parallel5_NUBAR2.sh  gen_3p3_fraction_parallel5.sh  gen_3p3_fraction_parallel5_NUBAR.sh  gen_3p3_fraction_parallel5_NUBAR2.sh
inject_signal_plots/: logs  plot0.sh  plot1.sh  plot2.sh  plot3.sh  plot3b.sh  plot3c.sh  plot4.sh
notes/: Makefile  main.tex
plot_scripts/: plot_icarus_intrinsic.c  plot_sbnd_intrinsic.c  plot_uboone_intrinsic.c  run_all_root.sh
